--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,14 @@
 # Drizzle
 DATABASE_URL="file:./db.sqlite"
 
+# Better Auth
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+
+# Discord
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
