--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "better-auth": "^1.2.12",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
