--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.81.5",
@@ -35,6 +33,7 @@
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
